site plan added

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -21,7 +21,7 @@ Fonts are separated by a & */
   --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
   --paragraph-background-color: #000000  ;
   --nav-link-color: white;
-  --nav-background-color: #396E94;
+  --nav-background-color: #12212c;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #396E94;
 }
